aws_infrastructure/environments/dev/modules/security_groups/maint.tf
resource "aws_security_group" "ec2_sg" {
  vpc_id      = var.vpc_id
  name        = "${var.environment}-ec2-sg"
  description = "Security group for EC2 instances"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # HTTP ouvert à tous (OK pour test, à restreindre en prod)
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # SSH ouvert à tous (OK pour test, à restreindre en prod)
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.environment}-ec2-sg"
    Environment = var.environment
  }
}
resource "aws_security_group" "rds_sg" {
  vpc_id      = var.vpc_id
  name        = "${var.environment}-rds-sg"
  description = "Security group for RDS instance"

  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.ec2_sg.id] # Autorise seulement le SG EC2
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.environment}-rds-sg"
    Environment = var.environment
  }
}
